2011-10-27  Peng Huang  <penghuang@chromium.org>

        [chromium] Remove some APIs which are not used anymore.
        https://bugs.webkit.org/show_bug.cgi?id=71068

        Reviewed by Darin Fisher.

        * public/WebWidget.h:
        * src/WebPopupMenuImpl.cpp:
        * src/WebPopupMenuImpl.h:
        * src/WebViewImpl.cpp:
        * src/WebViewImpl.h:

2011-10-27  Shawn Singh  <shawnsingh@chromium.org>

        [chromium] Track when CCLayerImpl properties have changed.
        https://bugs.webkit.org/show_bug.cgi?id=70442

        Reviewed by James Robinson.

        * WebKit.gypi:
        * tests/CCLayerImplTest.cpp: Added.
        (WebCore::TEST):

2011-10-27  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: HTTP headers merged incorrect in Chrome
        https://bugs.webkit.org/show_bug.cgi?id=69674

        Reviewed by Pavel Feldman.

        * src/WebHTTPLoadInfo.cpp:
        (WebKit::addHeader):

2011-10-27  Stephen Chenney  <schenney@chromium.org>

        [Chromium] Need setPrinting
        https://bugs.webkit.org/show_bug.cgi?id=46152

        Reviewed by Hajime Morita.

        * public/WebFrame.h: Added pure virtual prototype for printPagesWithBoundaries. Added enum
        and changed parameters for renderTreeAsText.
        * src/WebFrameImpl.cpp:
        (WebKit::ChromePrintContext::spoolAllPagesWithBoundaries): Added this method, based on
        the static in PrintContext. This uses Chromium specific page spooling and transforms.
        (WebKit::WebFrameImpl::renderTreeAsText): Updated to allow text dump in printed format.
        (WebKit::WebFrameImpl::printPagesWithBoundaries): Added method for testing printing page
        breaks.
        * src/WebFrameImpl.h: Added prototype.

2011-10-27  Antoine Labour  <piman@chromium.org>

        Fix teardown in Web*LayerImpl, and add tests for Web*Layer
        https://bugs.webkit.org/show_bug.cgi?id=70431

        Reviewed by James Robinson.

        * src/WebContentLayerImpl.cpp: